# chaiNNer

./: .envrc  .eslintrc.js  .eslintrc.json  .gitattributes  .gitignore  .prettierrc.json  .pylintrc  .stylelintrc.json  CONTRIBUTING.md  CONVERSION_SUMMARY.md  IMPLEMENTATION_NOTES.md  README.md  coverage.json  forge.config.example.ts  forge.config.js  index-web.html  index.html  jest.config.js  ncnnoptimize.cpp  onnx2ncnn_cpp  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  requirements.txt  tailwind.config.js  troubleshooting.md  tsconfig.json  vite.base.config.ts  vite.config.web.ts  vite.main.config.ts  vite.main.config.ts_  vite.preload.config.ts  vite.renderer.config.ts  vite.renderer.config.ts_  webpack.main.config.js  webpack.renderer.config.js  webpack.rules.js
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  other.md
.github/workflows/: build-site.yml  build.yml  generate-node-docs.yml  lint-backend.yml  lint-frontend.yml  lint.yml  main.yml  make.yml  release-test.yml  release.yml  test-backend.yml  test-frontend.yml  test.yml  wiki.yml
New Iterator/: README.md
backend/: .gitignore  .pylintrc  IMPLEMENTATION_SUMMARY.md  LOGGING.md  build.sh  demo_logging.py  nodemon.json  package.json  process.py  pyproject.toml  requirements.txt  run.py
backend/nodes/: LICENSE.txt  NodeBase.py  NodeFactory.py  __init__.py  categories.py  image_adj_nodes.py  image_chan_nodes.py  image_dim_nodes.py  image_filter_nodes.py  image_iterator_nodes.py  image_nodes.py  image_util_nodes.py  ncnn_nodes.py  node_base.py  node_factory.py  numpy_nodes.py  opencv_nodes.py  pytorch_nodes.py  utility_nodes.py
backend/src/: NODE_COMPILATION.md  PYTHON_PACKAGES.md  api.py  base_types.py  build_packages.py  compile_nodes.py  custom_types.py  events.py  gpu.py  installed_deps.py  lazy.py  logger.py  navi.py  node_check.py  package_loader.py  process.py  process_common.py  process_new.py  progress.py  progress_controller.py  response.py  run.py  server.py  server_config.py  server_host.py  server_process_helper.py  settings.py  setup_deps.py  system.py  type_checking.py  util.py  versioned_dependency_helpers.py
backend/tests/: README.md  dummy.py  test_cache.py  test_categories.py  test_chain.py  test_chain_input.py  test_chain_json.py  test_dependencies.py  test_different_length_iterators.py  test_dummy.py  test_events.py  test_executor.py  test_executor_timing.py  test_generator_exception_handling.py  test_gpu.py  test_group.py  test_import_error_handling.py  test_iterator.py  test_lazy.py  test_logger.py  test_navi.py  test_new_iterator_kind.py  test_node_compilation.py  test_optimize.py  test_output.py  test_package_building.py  test_progress_controller.py  test_response.py  test_rtx_remix_api.py  test_schema_loading.py  test_server_config.py  test_settings.py  test_system.py  test_transformer.py  test_transformer_kind.py  test_util.py
backend/utility/: translation_linter.py
dist-web/: index.html
dist-web/assets/: index-D7R8blv8.css  rregex-wfRLh_Ge.wasm
docs/: 01--Contributing.md  02--Data-Representation.md  03--Nodes.md  05--CLI.md  06--Troubleshooting.md  07--FAQ.md  08--Nodes-Reference.md  CONTRIBUTING.md  Home.md  cli.md  migrations.md  navi.md  nodes.md
frontend/: .eslintrc.json  package-lock.json  package.json  webpack.main.config.js  webpack.rules.js
frontend/src/: app.jsx  global.css  index.html  index.jsx  main.js  renderer.js  splash.css  splash.html  splash.jsx  splash_renderer.js  theme.js
patches/: @electron-forge+cli+6.4.1.patch  @electron-forge+plugin-vite+7.4.0.patch
scripts/: README.md  fetch_nodes.py  generate_node_docs.py  install-required-deps.ts  tsconfig.json
scripts/linux/: README.md  prerm  preun
src/: app.jsx  app.tsx  common-types.ts  custom.d.ts  discordRPC.js  downloads.js  downloads.json  downloads.ts  global.css  globals.d.ts  hooks.js  i18next.d.ts  index.jsx  main.js  main.ts  renderer.js  setupIntegratedPython.js  setupIntegratedPython.ts  splash.jsx  splash.tsx  splashTheme.ts  splash_renderer.js  theme.js  theme.ts
src/common/: 2d.ts  Backend.ts  CategoryMap.ts  IdSet.ts  PassthroughMap.ts  SaveFile.ts  SchemaInputsMap.ts  SchemaMap.ts  Validity.ts  backend-setup.ts  checkNodeValidity.ts  color-json-util.ts  common-types.ts  dependencies.ts  env.ts  externalIntegrations.ts  formatExecutionErrorMessage.ts  group-inputs.ts  groups.ts  i18n.ts  input-override-common.ts  input-override.ts  links.ts  log.ts  migrations-legacy.js  migrations.js  migrations.ts  packages.ts  pip.ts  pipInstallWithProgress.ts  python.ts  rust-regex.ts  safeIpc.ts  safeIpcCommon.ts  safeIpcMain.ts  safeIpcRenderer.ts  util.ts  version.ts
src/components/: CustomEdge.jsx  CustomEdge.tsx  CustomIcons.jsx  CustomIcons.tsx  DependencyManager.jsx  DependencyManager.tsx  Header.jsx  Header.tsx  HistoryProvider.tsx  NodeSelectorPanel.jsx  NodeSelectorPanel.tsx  ReactFlowBox.jsx  ReactFlowBox.tsx  SettingsModal.jsx  SettingsModal.tsx  SystemStats.jsx  (+3 more)
tests/: README.md  mock-backend.py  util.ts
vite/: base.config.ts  forge-types.ts  main.config.ts  preload.config.ts  renderer.config.ts
(+1479 files in other folders)
